{
  "sourceLanguage": "en",
  "strings": {
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
            "state": "translated",
            "value": "หน้าหลัก"
          }
        }
      }
    },
    "Forums": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Forums"
...
            "state": "translated",
            "value": "ลองอีกครั้ง"
          }
        }
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "state": "translated",
            "value": "ที่อยู่อีเมล"
          }
        }
      }
    },
    "Password": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Password"
...
